--- a/public/style.css
+++ b/public/style.css
@@ -28,7 +28,9 @@ body{
     background: #FFFFCC;
     
 }
-
+#logo{
+    width: 20%;
+}
 #logo-img{
     border-radius: 20px;
 }
@@ -48,6 +50,7 @@ body{
 }
 #weatherDescription {
     display: grid;
+    width: 100%;
     grid-template-columns: repeat(auto-fit , minmax(19rem , 1fr));
     background-color: #ff4500 ;
     padding-top: 20px;
@@ -71,25 +74,20 @@ body{
 }
 #right-side {
     display: flex;
+    flex-direction: row-reverse;
+    width: 80%;
+    height: 2rem;
 }
-#right-side > ul{
-    display: flex;
-    flex-direction: row;
-    
-}
-#right-side > ul > li{
-    list-style: none;
-    padding: 20px;
-    
-}
+
+
 input{
     text-align: center;
     
 }
 
 #searchInput{
-    height: 3vh;
-    width: 10vw;
+    height: 100%;
+    width: 50vw;
 
 }
 
